Properly and consistently indenting all java files